<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kikebmx.mysqlitecontactos.MainActivity">

    <EditText
        android:id="@+id/txtbuscar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/buscar"
        android:inputType="textFilter"
        android:textColor="@color/colorPrimary"
        android:textColorLink="@android:color/holo_blue_dark"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/btnNew"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="31dp"
        android:background="@android:color/background_dark"
        android:text="@string/nuevo"
        android:textColor="@android:color/background_light"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listaContactos"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@android:color/background_dark"
        android:text="@string/actualizarMain"
        android:textColor="@android:color/background_light"
        app:layout_constraintTop_toBottomOf="@+id/btnNew"
        tools:layout_editor_absoluteX="8dp" />

    <ListView
        android:id="@+id/listaContactos"
        android:layout_width="395dp"
        android:layout_height="298dp"
        tools:layout_editor_absoluteX="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="110dp" />

</android.support.constraint.ConstraintLayout>
